--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -72,12 +72,13 @@
     <Reference Include="DeconTools.Backend">
       <HintPath>..\..\lib\deconengine\DeconTools.Backend.dll</HintPath>
     </Reference>
+    <Reference Include="Mage, Version=1.3.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\x64\Mage.dll</HintPath>
+    </Reference>
     <Reference Include="ThermoRawFileReaderDLL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\$(Platform)\Thermo\ThermoRawFileReaderDLL.dll</HintPath>
-    </Reference>
-    <Reference Include="Mage">
-      <HintPath>..\..\lib\$(Platform)\Mage.dll</HintPath>
     </Reference>
     <Reference Include="MultiAlignEngine">
       <HintPath>..\..\lib\$(Platform)\MultiAlignEngine.dll</HintPath>
