--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -245,6 +245,7 @@
     <Compile Include="IO\Features\UmcAdoDAO.cs" />
     <Compile Include="IO\Clusters\UMCClusterAbundanceSumCrossTabWriter.cs" />
     <Compile Include="IO\Clusters\UMCClusterExporterFactory.cs" />
+    <Compile Include="IO\RawData\ScanOutOfRangeException.cs" />
     <Compile Include="IO\SingletonDataProviders.cs" />
     <Compile Include="IO\Xic\XicFitWriter.cs" />
     <Compile Include="IO\Xic\XicComparisonWriter.cs" />
