Updating the options and wizard pages.  So that entering filtering criteria is easy and works as expected on the backend code.  Using the analysis graph node to help visualize this in the GUI as well.

--- a/src/MultiAlign/MultiAlign.csproj
+++ b/src/MultiAlign/MultiAlign.csproj
@@ -178,6 +178,7 @@
     <Compile Include="ViewModels\Viewers\ClusterViewModel.cs" />
     <Compile Include="ViewModels\Wizard\AdvancedOptionsViewModel.cs" />
     <Compile Include="ViewModels\Wizard\AnalysisDatasetSelectionViewModel.cs" />
+    <Compile Include="ViewModels\Wizard\AnalysisGraphNodeViewModel.cs" />
     <Compile Include="ViewModels\Wizard\AnalysisLoadingViewModel.cs" />
     <Compile Include="ViewModels\Wizard\AnalysisNamingViewModel.cs" />
     <Compile Include="ViewModels\Wizard\AnalysisRunningViewModel.cs" />
