--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\MultiAlign\packages.config" />
+  <repository path="..\MultiAlignCore\packages.config" />
+  <repository path="..\MultiAlignTestSuite\packages.config" />
 </repositories>
