--- a/src/MultiAlign/packages.config
+++ b/src/MultiAlign/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="OxyPlot.Core" version="2014.1.227.1" targetFramework="net451" />
   <package id="OxyPlot.Wpf" version="2014.1.227.1" targetFramework="net451" />
 </packages>
